test/files/neg/t2275a.scala
object Test {
  if(true) {
    <br>
  }else{
    <span>{"louenesee"}</span>
  }
}
